# WebCrawler

./: .gitignore  LICENSE  README.md  pyproject.toml
conf/: logging.conf
tests/: test_taskmanager.py  test_utils.py
tests/models/: test_link.py
tests/network/: test_httpmanager.py  test_parser.py
tests/samples/: example_nolink.html  google.html
tests/utils/: utility.py
webcrawler/: taskmanager.py  utils.py  webcrawler.py
webcrawler/models/: __init__.py  link.py  models.py  page.py
webcrawler/network/: httpmanager.py  parser.py
