[project]
name = "webcrawler"
version = "1.0.0"
description = "WebCrawler looks for all links available in a web page and its children. All links visited and external will provided to the user via REST API"
authors = [
    {name = "Carmine Sacco"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "aiohttp (>=3.11.11,<4.0.0)",
    "selectolax (>=0.3.27,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
coverage = "^7.6.10"

[tool.pytest.ini_options]
pythonpath=[ ".", "webcrawler", "tests"]